--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "astro": "^5.8.0",
     "gsap": "^3.13.0",
     "motion": "^12.16.0",
+    "swiper": "^11.2.9",
     "tailwindcss": "^4.1.7"
   }
 }
