--- a/.k8s/manifest.yaml
+++ b/.k8s/manifest.yaml
@@ -61,6 +61,16 @@ spec:
                 name: landing-page
                 port:
                   number: 80
+    - host: ilogs.com.mx
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: landing-page
+                port:
+                  number: 80       
   tls:
     - hosts:
         - descubre.ilogs.com.mx
